test/tests/compiler/11_long_integers/valid/extra_credit/switch_int.plx
#  When an int is used the controlling expression of a switch statement,
#  * the constant in each case statement should be converted to an int.
#  










pub fn switch_on_int(i: i32) i32 {
    match i {
        -> 5 {
            return 0
        }
        #  this is 2^33; it will be truncated to int 0
        -> 8589934592l { #  case 0:
            return 1
        }
        #  this is 2^35 - 1; it will be truncated to -1
        -> 34359738367 { #  case -1:
            return 2
        }
        otherwise {
            return 3
        }
    }
}

pub fn main(none) i32 {
    #  Call switch_on_int once for each case, validate
    #      * that we get the expected result
    #      
    if switch_on_int(5) ~= false {
        return 1
    }
    if switch_on_int(0) ~= 1 {
        return 2
    }
    if switch_on_int(-1) ~= 2 {
        return 3
    }
    #  17179869184 is 2^34; it will be truncated to 0
    #      * when passed as a parameter to switch_on_int
    #      
    if switch_on_int(17179869184) ~= 1 {
        return 4 }

    return 0
}
